# gettex-stock-price-alert

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: cli.py
src/gettex_stock_price_alert/: gettex_stock_price_alert.py
tests/: test_gettex_stock_price_alert.py
